<resources>
    <string name="app_name">BusBooking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="email">Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="password">Password</string>
    <string name="cont">Continue</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_phonenumber">Enter Your PhoneNumber</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="enter_your_username">Enter Your UserName</string>
    <string name="username">UserName</string>
    <string name="where_are_you_going">Where are you going?</string>
    <string name="travel_from">Travel from</string>
    <string name="from_where">From Where?</string>
    <string name="where_to">Where to?</string>
    <string name="search">Search</string>
    <string name="departure_date">Departure Date</string>
    <string name="date">Date</string>
    <string name="departure_on">Departure On</string>
    <string name="total_travel_time">Total Travel Time</string>
    <string name="seat">Seat</string>
    <string name="price">Price</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="book_now">Book Now</string>
    <string name="no_travels_avaialble">No Travels Avaialble</string>
    <string name="mapKey">AIzaSyC4cCXwPJPXLJ_OAx93ebxC0I3l9DtV1qM</string>
    <string name="fare">Fare</string>
    <string name="you_pay">You Pay</string>
    <string name="book">Book</string>
    <string name="history">History</string>
    <string name="tickets">Tickets</string>
    <string name="bus_number">Bus Number</string>
    <string name="type">Type</string>
    <string name="busname">BusName:</string>
    <string name="busnumber">BusNumber:</string>
    <string name="availableseat">AvailableSeat:</string>
    <string name="capacity">Capacity:</string>
    <string name="enter_bus_name">Enter Bus Name</string>
    <string name="enter_bus_number">Enter Bus Number</string>
    <string name="save">Save</string>
    <string name="enter_start_destination">Enter Start Destination</string>
    <string name="enter_end_destination">Enter End Destination</string>
    <string name="enter_bus_capacity">Enter Bus Capacity</string>
    <string name="enter_departure_date">Enter Departure Date</string>
    <string name="enter_departure_time">Enter Departure Time</string>
    <string name="enter_stop">Enter Stop</string>
    <string name="enter_arrival_time">Enter Arrival Time</string>
    <string name="enter_image_url">Enter Image Url</string>
    <string name="choose_bus">Choose Bus</string>
    <string name="enter_price">Enter Price</string>
    <string name="txt_userEmail">Email:</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="bookings_date">Date:</string>
</resources>