<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.AddBusFragment">
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/fieldshape"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintWidth_percent="0.90"
        android:hint="@string/enter_start_destination"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:inputType="text"
        android:id="@+id/start"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start"
        android:background="@drawable/fieldshape"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintWidth_percent="0.90"
        android:hint="@string/enter_end_destination"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:inputType="text"
        android:id="@+id/end"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/end"
        android:background="@drawable/fieldshape"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintWidth_percent="0.90"
        android:hint="@string/enter_departure_date"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:inputType ="date"
        android:id="@+id/departureDate"
        android:focusable="false"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/departureDate"
        android:background="@drawable/fieldshape"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintWidth_percent="0.90"
        android:hint="@string/enter_departure_time"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:inputType ="time"
        android:id="@+id/departureTime"
        android:focusable="false"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/departureTime"
        android:background="@drawable/fieldshape"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintWidth_percent="0.90"
        android:hint="@string/enter_stop"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_35sdp"
        android:inputType ="text"
        android:id="@+id/stops"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stops"
        android:background="@drawable/fieldshape"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintWidth_percent="0.90"
        android:hint="@string/enter_arrival_time"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:inputType ="time"
        android:id="@+id/arrivalTime"
        android:focusable="false"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrivalTime"
        android:background="@drawable/fieldshape"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintWidth_percent="0.90"
        android:hint="@string/enter_image_url"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:inputType ="textUri"
        android:id="@+id/imageUrl" />
    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="@id/stops"
        app:layout_constraintTop_toTopOf="@id/stops"
        app:layout_constraintBottom_toBottomOf="@id/stops"
        android:layout_marginEnd="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        android:backgroundTint="@color/mainColor"
        android:id="@+id/btnAddStop">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white_add"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageUrl"
        android:background="@drawable/fieldshape"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintWidth_percent="0.90"
        android:hint="@string/choose_bus"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:inputType ="number"
        android:id="@+id/busId"
        android:focusable="false"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/busId"
        android:background="@drawable/fieldshape"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintWidth_percent="0.90"
        android:hint="@string/enter_price"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:inputType ="numberDecimal"
        android:id="@+id/price" />
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/save"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintWidth_percent="0.90"
        android:fontFamily="@font/poppinssemibold"
        android:id="@+id/btnSave"/>
</androidx.constraintlayout.widget.ConstraintLayout>