<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.LoginFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/sign_in"
        android:textSize="@dimen/_35sdp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/txtSignIn"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txtSignIn"
        app:layout_constraintTop_toBottomOf="@id/txtSignIn"
        android:text="@string/enter_your_email"
        android:textSize="@dimen/_18sdp"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/txtEnterEmail"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEnterEmail"
        android:background="@drawable/fieldshape"
        app:layout_constraintWidth_percent="0.95"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/poppinsregular"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:id="@+id/emailField"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txtEnterEmail"
        app:layout_constraintTop_toBottomOf="@id/emailField"
        android:text="@string/enter_your_password"
        android:textSize="@dimen/_18sdp"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginTop="@dimen/_20sdp"
        android:inputType="textEmailAddress"
        android:id="@+id/txtEnterPassword"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEnterPassword"
        android:background="@drawable/fieldshape"
        app:layout_constraintWidth_percent="0.95"
        android:hint="@string/password"
        android:fontFamily="@font/poppinsregular"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:inputType="textPassword"
        android:id="@+id/passwordField"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_10sdp"
            android:backgroundTint="@color/mainColor"
            android:text="@string/cont"
            android:textSize="@dimen/_18sdp"
            app:icon="@drawable/baseline_arrow_forward_24"
            app:iconGravity="textEnd"
            app:layout_constraintWidth_percent="0.90"
            android:fontFamily="@font/poppinssemibold"
            android:id="@+id/btnContinue"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        app:layout_constraintBottom_toTopOf="@id/btnContinue"
        android:indeterminateTint="@color/mainColor"
        android:visibility="gone"
        android:id="@+id/progressBar"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:strokeWidth="@dimen/_1sdp"
        app:strokeColor="#D3D3D3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinmedium"
        android:textSize="@dimen/_13sdp"
        android:id="@+id/btnSignUp"/>
</androidx.constraintlayout.widget.ConstraintLayout>