<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.AddBusFragment">
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/fieldshape"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintWidth_percent="0.90"
        android:hint="@string/enter_bus_name"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:inputType="text"
        android:id="@+id/busName"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/busName"
        android:background="@drawable/fieldshape"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintWidth_percent="0.90"
        android:hint="@string/enter_bus_number"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:inputType="text"
        android:id="@+id/busNumber"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/busNumber"
        android:background="@drawable/fieldshape"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintWidth_percent="0.90"
        android:hint="@string/enter_bus_capacity"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:inputType ="number"
        android:id="@+id/capacity"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/save"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintWidth_percent="0.90"
        android:fontFamily="@font/poppinssemibold"
        android:id="@+id/btnSave"/>
</androidx.constraintlayout.widget.ConstraintLayout>