<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.SearchFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_are_you_going"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinssemibold"
        android:id="@+id/whereAreYouGoingText"/>
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whereAreYouGoingText"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintWidth_percent="0.95"
        app:cardCornerRadius="@dimen/_15sdp"
        android:id="@+id/searchCard">
            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="2"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:layout_height="match_parent">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppinsregular"
                        android:hint="@string/from_where"
                        android:id="@+id/userLocationField"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppinsregular"
                        android:hint="@string/where_to"
                        android:id="@+id/destinationField"/>
            </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="@id/searchCard"
        app:layout_constraintTop_toBottomOf="@id/searchCard"
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/cardDate"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departure_date"
                android:textSize="@dimen/_15sdp"
                android:fontFamily="@font/poppinmedium"
                android:layout_weight="1"
                android:id="@+id/departureDateText"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/date"
                android:drawableEnd="@drawable/baseline_calendar_month_24"
                android:paddingEnd="@dimen/_10sdp"
                android:focusable="false"
                android:id="@+id/departureDateField"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/search"
        android:textSize="@dimen/_18sdp"
        app:icon="@drawable/baseline_arrow_forward_24"
        app:iconGravity="textEnd"
        app:layout_constraintWidth_percent="0.90"
        android:id="@+id/btnSearch"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardDate"
        app:layout_constraintBottom_toTopOf="@id/btnSearch"
        app:layout_constraintWidth_percent="0.90"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:id="@+id/travelsRecycler"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_travels_avaialble"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/travelsRecycler"
        app:layout_constraintBottom_toBottomOf="@id/travelsRecycler"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinmedium"
        android:visibility="gone"
        android:id="@+id/txt_notAvailable"/>
</androidx.constraintlayout.widget.ConstraintLayout>