<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.HomeFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/username"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinsbold"
        android:textSize="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/userName"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/fieldshape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintWidth_percent="0.95"
        android:drawableStart="@drawable/baseline_search_24"
        android:paddingStart="@dimen/_20sdp"
        android:drawablePadding="@dimen/_15sdp"
        android:text="@string/where_are_you_going"
        android:textSize="@dimen/_15sdp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinsregular"
        android:id="@+id/searchBar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel_from"
        android:textSize="@dimen/_20sdp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/userName"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/travelLocationText"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/travelLocationText"
        android:layout_marginTop="@dimen/_10sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_10sdp"
        android:id="@+id/locationsRecycler"/>
</androidx.constraintlayout.widget.ConstraintLayout>